--- a/build.gradle
+++ b/build.gradle
@@ -11,14 +11,16 @@ sourceCompatibility = '1.8'
 
 repositories {
     mavenCentral()
+    maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
 }
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
     compile 'com.alicp.jetcache:jetcache-starter-redis:2.6.0.M2'
-    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
     compile group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis'
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
