--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     compile 'com.alicp.jetcache:jetcache-starter-redis:2.6.0.M2'
     compile group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis'
+    //compile group: 'redis.clients', name: 'jedis', version: '3.2.0'
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
